--- a/index.html
+++ b/index.html
@@ -1,45 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset ="UTF-8" />
-        <title>Gabriella Professional Profile</title>
-        <link rel="stylesheet" href="./assets/css/style.css"/>
-    </head>
-    <body>
-    <header>
-        <h1>
-            <a href="/">Akpojiyovwi</a>
-        </h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#About-Me">About Me</a>   
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="Description" content="Enter your description here" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Gabriella Portfolio</title>
+</head>
+
+<body>
+    <!--Nav Bar-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Gabriella Akpojiyovwi</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#about-me">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact-me">Contact Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Resume</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!--End Nav Bar-->
+    <hr>    
+
+    <!--Jumbotron-->
+    <div class="container photo">
+        <div class="display-4">
+            <img src="assets/images/Calculator.jpg" height=“100" width=“100” alt=“image” loading=“lazy”/>
+          <h3>Developer Paradise</h3>  
+        </div>
+    </div>
+    
+    <!--End Jumbotron-->
+    <hr />
+    <div class="flex-container">
+        <!--About Me Section  -->
+        <section id="about-me" class="column">
+            <aside class="row-a">
+                <h2>About Me</h2>
+            </aside>
+            <div id="about-me" class="container row-b">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
+                    nulla consequatur quia expedita totam fuga deleniti nihil, ab
+                    consectetur sunt ad labore ex corporis repudiandae reprehenderit
+                    vitae repellendus, voluptates qui?
+                </p>
+            </div>
+        </section>
+        <!-- End About Me -->
+        <hr />
+        <!-- Portfolio Section -->
+        <section class="row">
+            <aside class="col-a">
+                <h2>Portfolio</h2>
+            </aside>
+            <div id="portfolio" class="container-fluid col-b">
+                <div class="card-group">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="..." />
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">
+                                This is a wider card with supporting text below as a natural
+                                lead-in to additional content. This content is a little bit
+                                longer.
+                            </p>
+                            <p class="card-text">
+                                <small class="text-muted">Last updated 3 mins ago</small>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="..." />
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">
+                                This card has supporting text below as a natural lead-in to
+                                additional content.
+                            </p>
+                            <p class="card-text">
+                                <small class="text-muted">Last updated 3 mins ago</small>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="..." />
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">
+                                This is a wider card with supporting text below as a natural
+                                lead-in to additional content. This card has even longer
+                                content than the first to show that equal height action.
+                            </p>
+                            <p class="card-text">
+                                <small class="text-muted">Last updated 3 mins ago</small>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Portfolio -->
+        <hr />
+        <!-- Contact Me Section -->
+        <section class="column">
+            <aside class="row-a">
+                <h2>Contact Me</h2>
+            </aside>
+            <ul class="nav row-b">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="">555-555-555</a>
                 </li>
-                <li>
-                    <a href="#My-Work"> My Work</a>
-                </li> 
-                <li>
-                    <a href="#Contact-Me">Contact Me</a> 
-                </li>   
-            </ul>       
-        </nav>
-    </header>
-    <section id="About-Me" class="About-Me">
-        <h2 class="sec-title">About Me</h2>
-          
-    </section>
-    <section id="My-Work" class="My-Work">
-        <h2 class="">Work</h2>
-    </section>
-    <Section id="Contact-Me" class="Contact-Me">
-        <div class="flex-r">
-            <h2>Contact Me</h2>
-        </div>
-        <div class="reach">
-            <p>555-555-5555</p>
-            <p><a href="mailto:gab.akpoj@gmail.com">gab.akpoj@gmail.com</a></p>
-            <p><a href=https://github.com/ella9894?tab=projects&type=beta>Github</a></p>
-        </div>
-    </Section>
-    </body>
-</html>    
+                <li class="nav-item">
+                    <a class="nav-link" href="mailto:gab.akpoj@gmail.com">gab.akpoj@gmail.com</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://github.com/ella9894?tab=repositories">Github</a>
+                </li>
+            </ul>
+        </section>
+    </div>
+    <!--End Contact Me Section-->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+</body>
+
+</html>
