css styling, images and  project links

--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
             <h2>About Me</h2>
             <div> 
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
-                    nulla consequatur quia expedita totam fuga deleniti nihil, ab
-                    consectetur sunt ad labore ex corporis repudiandae reprehenderit
-                    vitae repellendus, voluptates qui?
+                   My name is Gabriella Akpojiyovwi! I was born in Nigeria and migrated to America as a young child! 
+                   I grew up in Houston Texas and studied Chemical Engineering at Prairie View A&M University! I currently
+                   work as a Process Engineer for a Paints and Coatings company but am switching over to Full Stack Web Development!
+                   I graduated from the prestigous Rutgers University Bootcamp! This is a Portfolio of a few of the projects 
+                   I have done to demonstrate the web development knowledge that I have been gaining! Enjoy scrolling through my website
+                   and thanks for stopping by!
                 </p>
             </div>
         </section>
@@ -47,35 +49,33 @@
         <hr />
         <!-- Portfolio Section -->
         <section class="section-class" id="work">
-            <aside>
-                <h2>Portfolio</h2>
-            </aside>
+            <h2>Portfolio</h2>
             <div class="work-container">
-                <a href="#" class="work-child team">
+                <a href="https://safe-tundra-43948.herokuapp.com/ (Links to an external site.)" class="work-child team">
                     <div>
                         <h3>Pokemon Team Builder</h3>
                         <p>MERN Stack</p>
                     </div>
                 </a>
-                <a href="#" class="work-child better">
+                <a href="https://bestest-reads.herokuapp.com/" class="work-child better">
                     <div>
                         <h3>Better Reads</h3>
                         <p>Fullstack</p>
                     </div>
                 </a>
-                <a href="#" class="work-child movie">
+                <a href="https://alexpap1.github.io/Whats-That-Movie/" class="work-child movie">
                     <div>
                         <h3>What's that Movie</h3>
                         <p>HTML/CSS/Javascript</p>
                     </div>
                 </a>
-                <a href="#" class="work-child password">
+                <a href="https://ella9894.github.io/Password-Generator/" class="work-child password">
                     <div>
                         <h3>Password Generator</h3>
                         <p>HTML/CSS/Javascript</p>
                     </div>
                 </a>
-                <a href="#" class="work-child run">
+                <a href="https://ella9894.github.io/Run-Buddy/" class="work-child run">
                     <div>
                         <h3>Run Buddy</h3>
                         <span>HTML/CSS</span>
@@ -87,9 +87,7 @@
         <hr />
         <!-- Contact Me Section -->
         <section class="section-class contact" id="contact">
-            <aside class="row-a">
-                <h2>Contact Me</h2>
-            </aside>
+            <h2>Contact Me</h2>
             <address>
                 <a aria-current="page" href="">555-555-555</a>
                 <a href="mailto:gab.akpoj@gmail.com">gab.akpoj@gmail.com</a>
